--- a/admin/css/tools-def.css
+++ b/admin/css/tools-def.css
@@ -15726,7 +15726,9 @@ input:disabled + .rex_edit_title_slider {
   visibility: hidden; }
 
 .toolbox-right-fast-config-area {
-  padding-right: 10px; }
+  padding-left: 10px;
+  position: absolute;
+  left: 100%; }
   .toolbox-right-fast-config-area .tool-button {
     -webkit-box-shadow: none;
             box-shadow: none; }
